fix: scroll padding on mobile

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1717,8 +1717,8 @@ img.markdown {
   scroll-margin-top: 50px;
 }
 
-.scroll-pt-\[60px\] {
-  scroll-padding-top: 60px;
+.scroll-pt-\[45px\] {
+  scroll-padding-top: 45px;
 }
 
 .flex-row {
@@ -2775,6 +2775,10 @@ img.markdown {
     --tw-scale-x: .75;
     --tw-scale-y: .75;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
+  .md\:scroll-pt-\[60px\] {
+    scroll-padding-top: 60px;
   }
 
   .md\:grid-cols-2 {
